# auto-deploy

./: .env.example  MANIFEST.in  README.md  deploy.py  pyproject.toml
autodeploy_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
