[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodeploy-ai"
version = "1.6.9"
description = "Git Init · AI Commit · Auto Push — one command from any terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["git", "deploy", "ai", "commit", "cli", "automation"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "pyfiglet>=1.0.0",
]

[[project.authors]]
name = "dhiksn"

[project.urls]
Homepage = "https://github.com/dhiksn/auto-deploy"
Repository = "https://github.com/dhiksn/auto-deploy"
"Bug Tracker" = "https://github.com/dhiksn/auto-deploy/issues"

[project.scripts]
autodeploy = "deploy:main_cli"

[tool.setuptools]
py-modules = ["deploy"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.png"]
